--- a/LightBulbGame/src/main/resources/ija/game/lightbulbgame/GameView.fxml
+++ b/LightBulbGame/src/main/resources/ija/game/lightbulbgame/GameView.fxml
@@ -7,7 +7,8 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="ija.game.lightbulbgame.GameController"
-            stylesheets="@Styles/GameStyles.css">
+            stylesheets="@Styles/GameStyles.css"
+            minWidth="800" maxWidth="800" minHeight="800" maxHeight="800">
 
     <top>
         <HBox alignment="CENTER" spacing="10">
